[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://PlayerAnimation.tscn" type="PackedScene" id=2]

[sub_resource type="CylinderMesh" id=32]
height = 0.001

[sub_resource type="ConvexPolygonShape" id=41]
points = PoolVector3Array( 0.817, 2, 0.346, -0.817, 2, 0.346, -0.817, 2, -0.346, 0.817, 2, -0.346, 0.5, -2, -0.346, -0.5, -2, -0.346, -0.5, -2, 0.346, 0.5, -2, 0.346 )

[sub_resource type="SphereShape" id=42]
radius = 1.26344

[node name="Player" type="KinematicBody"]
collision_mask = 6
script = ExtResource( 1 )
speed = 128
frict = 8

[node name="Shadow Mesh" type="MeshInstance" parent="."]
transform = Transform( 0.7, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.336, 0 )
cast_shadow = 3
mesh = SubResource( 32 )
skeleton = NodePath("")

[node name="Bot Collider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 41 )

[node name="SpriteAnimation" parent="." instance=ExtResource( 2 )]
transform = Transform( 10, 0, 0, 0, 20, 0, 0, 0, 1, 0, 3.771, 0 )

[node name="SwordHitbox" type="Area" parent="SpriteAnimation"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="SpriteAnimation/SwordHitbox"]
transform = Transform( 0.1, 0, 0, 0, 0.05, 0, 0, 0, 1, 0.130108, -0.124772, 0 )
shape = SubResource( 42 )

[node name="DashTimer" type="Timer" parent="."]
process_mode = 0

[node name="Hearts" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="InvulTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="SpriteAnimation" to="." method="_on_SpriteAnimation_animation_finished"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
